manifests/matrix_chart.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: chat

---

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: matrix
  namespace: chat
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    traefik.ingress.kubernetes.io/frontend-entry-points: http,https
    traefik.ingress.kubernetes.io/redirect-entry-point: https
    traefik.ingress.kubernetes.io/redirect-permanent: "true"
spec:
  tls:
  - hosts:
    - matrix.cluster.fun
    secretName: matrix-ingress
  rules:
  - host: matrix.cluster.fun
    http:
      paths:
      - path: /.well-known/matrix
        backend:
          serviceName: well-known
          servicePort: 80
      - path: /
        backend:
          serviceName: chat-matrix-synapse
          servicePort: 80

---

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: riot
  namespace: chat
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    traefik.ingress.kubernetes.io/frontend-entry-points: http,https
    traefik.ingress.kubernetes.io/redirect-entry-point: https
    traefik.ingress.kubernetes.io/redirect-permanent: "true"
spec:
  tls:
  - hosts:
    - chat.cluster.fun
    secretName: riot-ingress
  rules:
  - host: chat.cluster.fun
    http:
      paths:
      - path: /
        backend:
          serviceName: chat-matrix-riot
          servicePort: 80

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: well-known
  namespace: chat
spec:
  replicas: 1
  selector:
    matchLabels:
      app: well-known
  template:
    metadata:
      labels:
        app: well-known
    spec:
      containers:
      - name: web
        image: nginx
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
          name: web
        volumeMounts:
        - name: well-known
          mountPath: /usr/share/nginx/html/.well-known/matrix
      volumes:
      - name: well-known
        configMap:
          name: well-known
---
apiVersion: v1
kind: Service
metadata:
  name: well-known
  namespace: chat
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
    name: web
  selector:
    app: well-known
